--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <img src="image/father_garin.jpg" alt="Father Antoine Garin">
   <hr> 
   <!-- main text to welcome people to the website and give a bit of insight -->
-<p> This website is about Father Antonie Garin, and his journey he took to become one of New Zealands main reason why Cathoclism fiath is in the country.
+<p> This website is about Father Antonie Garin, and his journey he took to become one of New Zealands main reason why Cathoclism faith is in the country.
 </body>
 
 </html>
