--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+  <!-- main head code -->
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
@@ -11,12 +12,38 @@
 <!-- main body code -->
 
 <body>
+  <!-- Buttons for navagtion system -->
   <h1> Father Antonie Garin</h1>
   <a href="index.html"><button>Home page</button></a>
   <a class="active" href="about.html"><button>About Father Garin</button></a>
   <a href="father Garin Journey.html"><button>Father Garin's Journey</button></a>
  <hr>
+<!-- Main body text-->
+  <p>Early Life:<br>
+Father Garin was born July 23, 1810, at Saint Rambert-en-Bugey, France. He was the son of a very Catholic man who instilled strong Catholic beliefs in him from a young age. He grew up very Cathollic and in October 1834 Father Garin was ordained and began working as a priest.
+  </p>
+  <p>
+Middle Life:<br>
+    Father Garin then joined the Socity of Mary in 1837, and Bishop Pompallier was in charge and went to New Zealand with the Society of Mary. Father Garin arrived in 1841 and began helping everyone by setting churches and teaching th Catholic Fatih. He then was moved to Nelson in 1850 and become the first resident Priest in the region.
+    </p>
+  <p>
+  Late Life:<br>
+  Father Garin started to have decline in his health for many years, but did not want to give up his job and work of helping people connected with God. This means he didn't go back to france and decide to stay in Nelson where he eventually died in Nelson on April 14, 1889. Father Garin then was put into a cemetery at Wakapuaka and there was  a chapel which was built at Wakapuaka in his name.
+  </p>
+  <p>
+  After effect:<br>
+  Father Gairns Memory lives on in the Nelson and wider communities to this day, from the churches he built and to the Catholic schools in the region. This includes the Catholic School in the Nelson area named after Father Garin himself called Garin college.</p>
+</p>
+<!-- Image of one od Father Garin's churches-->
+  <img class="church" src="image/church.jpg" alt="Image of one of Father Garins Church in Nelson">
+
+
   
+  </div>
+  <!--Copyright code-->
+  <div class="footer">
+    <p>Copyright © Harrison </p>
+  </div>
 </body>
 
 </html>
