--- a/index.html
+++ b/index.html
@@ -12,15 +12,26 @@
   
 <!-- main body code -->
 <body>
+  <div>
   <h1> Father Antonie Garin</h1>
+<!-- Buttons for navagtion system -->
   <a class="active" href="index.html"><button>Home page</button></a>
   <a href="about.html"><button>About Father Garin</button></a>
   <a href="father Garin Journey.html"><button>Father Garin's Journey</button></a>
   <hr>
-  <img src="image/father_garin.jpg" alt="Father Antoine Garin">
+<!--Image of Father Garin code-->
+  <img src="image/father_garin.jpg" alt="Father Antoine Garin phto">
   <hr> 
+    </div>
+  <div>
   <!-- main text to welcome people to the website and give a bit of insight -->
-<p> This website is about Father Antonie Garin, and his journey he took to become one of New Zealands main reason why Cathoclism faith is in the country.
+<p> This website is about Father Antonie Garin, and his journey he took to become one of <br> New Zealands main reason why Cathoclism faith is in the country. </p>  
+    </div>
+  <!--Copyright code-->
+  <div class="footer">
+    <p>Copyright © Harrison </p>
+    
+  </div>
 </body>
 
 </html>
