--- a/father Garin Journey.html
+++ b/father Garin Journey.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+  <!-- main head code -->
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
@@ -11,12 +12,33 @@
 <!-- main body code -->
 
 <body>
+  <!-- Buttons for navagtion system -->
   <h1> Father Antonie Garin</h1>
   <a href="index.html"><button>Home page</button></a>
   <a href="about.html"><button>About Father Garin</button></a>
   <a class="active" href="father Garin Journey.html"><button>Father Garin's Journey</button></a>
   <hr>
+<!-- Image of Map of New Zealand-->
+  <img class="journey" src="image/map_of_nz.png" alt="Map of New Zealand">
+  <div class="content">
+    <h1>Father Garin's Journey</h1>
+<!-- Main Body text-->
+    <p>
+    Father Garin joined the society of Mary in 1837, and Bishop Pompallier who was in charge told them and Father Garin to come to New Zealand. Father Garin arrived in 1841 and began helping everyone by setting up schools and churches. He then was moved to Nelson in 1850 and become the first resident Priest in the region. Father Garin went on to Build lots of churches and Schools which were all being attend. Father Garin was in Nelson for a total of 40 years and is a main reason why there is a catholic faith in Nelson. Father Garin was an inspiration to everyone at the time he was alive, and to this date his legacy still continues through Garin college and the Nelson region.
+</p>
+  </div>
   
+  <!-- Video talking about Father Garin Nelson journey-->
+  <div class="video">
+    <iframe width="600" height="300" 
+  src="https://www.youtube.com/embed/wq4ulttHDtg?autoplay=1&mute=1">
+  </iframe>
+  </div>
+  
+  <!--Copyright code-->
+  <div class="footer">
+    <p>Copyright © Harrison </p>
+  </div>
 </body>
 
 </html>
