Final One For Real

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <!-- Buttons for navagtion system -->
   <a class="active" href="index.html"><button>Home page</button></a>
   <a href="about.html"><button>About Father Garin</button></a>
-  <a href="father Garin Journey.html"><button>Father Garin's Journey</button></a>
+  <a href="father_garin_journey.html"><button>Father Garin's Journey</button></a>
   <hr>
 <!--Image of Father Garin code-->
   <img src="image/father_garin.jpg" alt="Father Antoine Garin phto">
