--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
   <h1> Father Antonie Garin</h1>
   <a href="index.html"><button>Home page</button></a>
   <a class="active" href="about.html"><button>About Father Garin</button></a>
-  <a href="father Garin Journey.html"><button>Father Garin's Journey</button></a>
+  <a href="father_garin_journey.html"><button>Father Garin's Journey</button></a>
  <hr>
 <!-- Main body text-->
   <p>Early Life:<br>
