--- a/father_garin_journey.html
+++ b/father_garin_journey.html
@@ -16,7 +16,7 @@
   <h1> Father Antonie Garin</h1>
   <a href="index.html"><button>Home page</button></a>
   <a href="about.html"><button>About Father Garin</button></a>
-  <a class="active" href="father Garin Journey.html"><button>Father Garin's Journey</button></a>
+  <a class="active" href="father_garin_journey.html"><button>Father Garin's Journey</button></a>
   <hr>
 <!-- Image of Map of New Zealand-->
   <img class="journey" src="image/map_of_nz.png" alt="Map of New Zealand">
